FIX: link to messages endpoints

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
             <td>Message</td>
             <td>/messages</td>
             <td>post, put, delete, get(One, All)</td>
-            <td><a href="/employees/1">GET ONE MESSAGE</a> || <a href="/employees">GET ALL MESSAGES</a></td>
+            <td><a href="/messages/1">GET ONE MESSAGE</a> || <a href="/messages">GET ALL MESSAGES</a></td>
         </tr>
     </table>
 </body>
