--- a/public/index.html
+++ b/public/index.html
@@ -1,42 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html> <!-- Important: must specify -->
+
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="utf-8"> <!-- Important: rapi-doc uses utf8 characters -->
+    <script type="module" src="https://unpkg.com/rapidoc/dist/rapidoc-min.js"></script>
 </head>
 
 <body>
-    <h1>Hotel Miranda</h1>
-    <table>
-        <tr>
-            <th>MODEL NAME</th>
-            <th>PATH</th>
-            <th>ENDPOINTS</th>
-            <th>ACTIONS</th>
-        </tr>
-        <tr>
-            <td>Room</td>
-            <td>/rooms</td>
-            <td>post, put, delete, get(One, All)</td>
-        </tr>
-        <tr>
-            <td>Booking</td>
-            <td>/bookings</td>
-            <td>post, put, delete, get(One, All)</td>
-        </tr>
-        <tr>
-            <td>Employee</td>
-            <td>/employees</td>
-            <td>post, put, delete, get(One, All)</td>
-        </tr>
-        <tr>
-            <td>Message</td>
-            <td>/messages</td>
-            <td>post, put, delete, get(One, All)</td>
-        </tr>
-    </table>
+    <rapi-doc spec-url="spec.json" 
+    theme="dark">
+    </rapi-doc>
 </body>
 
 </html>
